More Discussions, expand Markets, etc
* Use more standard Markdown
* Minor fixes

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -10,7 +10,7 @@ Politeia is "Getting close to a public beta of voting" ([slack](https://decred.s
 
 Decred.org received a new sleek [exchanges page](https://www.decred.org/exchanges/).
 
-Trezor support advanced with Decred PR [merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
+Trezor support got closer as Decred patch [was merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
 
 WooCommerce [Decred plugin](https://github.com/xifrat/decred-woocommerce-plugin) alpha version is ready for testing.
 
@@ -22,9 +22,9 @@ Dev activity stats for April: 152 active PRs, 125 commits, 21,656 added and 10,2
 
 Updates from Obelisk's Taek:
 
-> We got results back. They are more or less on line with the simulations\
-> I didn't realize this, but we don't get the real chips back for 3 more weeks. The ones we've been testing are hacked together into a DIP package (they are BGA chips) that really screws up the results\
-> There's a decent chance that the full bga chips perform better\
+> We got results back. They are more or less on line with the simulations  
+> I didn't realize this, but we don't get the real chips back for 3 more weeks. The ones we've been testing are hacked together into a DIP package (they are BGA chips) that really screws up the results  
+> There's a decent chance that the full bga chips perform better  
 > For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203), Apr 12)
 
 And regarding the June delivery date:
@@ -67,19 +67,21 @@ Finally,
 
 > viniciusfrias: We're excited to announce PagueCripto.com, a Brazilian crypto-to-fiat payment gateway which accepts Decred among other cryptocurrencies for Brazilians to pay daily bills, such as credit cards, energy, rent, etc, and also to make local bank transfers. Our service is both a web platform and an Android app, and as our community is relevant in Brazil, we are offering a discount coupon (50%) in service fees using DCR until May 14, 2018. Check it out at [paguecripto.com](https://www.paguecripto.com/) and in Google Play Store. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1525043419000038))
 
-> michae2xl: Decred is now available on [@ezBtcCanada](https://twitter.com/ezBtcCanada) — an exchange with DCR/CAD trading pair. From Toronto — https://www.ezbtc.ca/trade/alt-coins
+Moving to other countries, good news from Canada:
 
-i2Rav announced a new [trading desk](https://i2trading.com/) that will be offering DCR/EUR pair.
+> michae2xl: Decred is now available on [@ezBtcCanada](https://twitter.com/ezBtcCanada), an exchange with DCR/CAD trading pair. From Toronto — [ezbtc.ca](https://www.ezbtc.ca/)
+
+i2Rav [announced](https://decred.slack.com/archives/C0NRMDVMJ/p1522975903000135) [i2trading.com](https://i2trading.com/), a new trading desk that will be offering DCR/EUR pair:
 
 > Eventually we hope to offer the pair in GBP and YEN as well
 
 [changenow.io](https://changenow.io/), a non-custodian exchange for fast conversions, [added](https://twitter.com/decredproject/status/981623403378454528) DCR.
 
-You can see all exchanges known to support Decred in a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) maintained by snr01. Many of them are absent from coinmarketcap.
+You can see all exchanges known to support Decred in a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) maintained by snr01. Many of them are missing from coinmarketcap.
 
 ## Adoption
 
-[The Crypto Lawyers, LLP](https://thecryptolawyers.com/), a crypto exclusive U.S. law firm began accepting Decred. ([reddit](https://www.reddit.com/r/decred/comments/8909x6/the_crypto_lawyers_a_crypto_exclusive_us_law_firm/))
+[The Crypto Lawyers, LLP](https://thecryptolawyers.com/), a crypto exclusive U.S. law firm began accepting Decred ([reddit](https://www.reddit.com/r/decred/comments/8909x6/the_crypto_lawyers_a_crypto_exclusive_us_law_firm/)):
 
 > RAurelius: I think that a law firm accepting Decred is a worthy distinction from other previously publicized companies that accept Decred for typical consumer products. Legal services are severely lacking in the Crypto-sphere, so the publicity is good for everyone in this arena.
 
@@ -87,7 +89,7 @@ Great to see business owners reaching us directly in chat.
 
 [VotoLegal](https://votolegal.com.br/) is [migrating](https://twitter.com/marco_peereboom/status/986699534888730624) from Ethereum to Decred blockchain:
 
-> emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizens, now uses dcrtime and Decred blockchain.\
+> emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizens, now uses dcrtime and Decred blockchain.  
 > https://twitter.com/decred_br/status/986610826051276800 ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150))
 
 ## Partnerships
@@ -167,7 +169,7 @@ Marco in shitcoin talk episode 54 ([youtube](https://www.youtube.com/watch?v=o5B
 
 ## Community Discussions
 
-A debate on protocol security and cost to attack. ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/))
+Reddit highlights: A [debate](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/) on Decred protocol security and attack cost, a [comparison](https://www.reddit.com/r/decred/comments/8dszhf/expected_versus_actual_block_production_times/) of expected and actual block production times, a [write-up](https://www.reddit.com/r/decred/comments/8aro9e/thought_experiment_combining_decred_and_monero_to/) on distribution of powers and how Monero could benefit from a PoS governance layer, [two](https://www.reddit.com/r/decred/comments/8a0hh8/antiasic_forks_considered_harmful_by_philip_daian/) [other](https://www.reddit.com/r/decred/comments/8axc02/is_the_war_against_asics_worth_fighting_by_derek/) threads on ASIC resistance, and one discussing different types of [decentralization](https://www.reddit.com/r/decred/comments/895ets/jimmy_song_bitcoin_is_king/).
 
 Very thoughtful discussion on whether it is appropriate to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and unwanted contributions to the marketing efforts of a decentralized project. ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), [continued](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029))
 
@@ -185,13 +187,15 @@ In April Decred showed a confident recovery after previous months. DCR/USD moved
 
 OOOBTC showed unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) of $19 m on April 10 ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/)), it went back to normal 2 weeks later.
 
-On April 25 a wild rush took the price from BTC 0.00777 to 0.0177 in under 30 minutes on Poloniex, with prices on other exchanges following to a lesser degree. Discussions [here](https://www.reddit.com/r/decred/comments/8eq566/uh_wtf_just_happened/) and [here](https://www.reddit.com/r/Dcrtrader/comments/8eq5mm/holy_fing_hell_did_something_just_happen/).
+On April 25 a wild rush took the price from 0.00777 to 0.0177 BTC in under 30 minutes on Poloniex, setting a new USD all time high of ~$165 ($141 world average). Prices on other exchanges followed to a lesser degree. Possible causes were discussed on [reddit](https://www.reddit.com/r/decred/comments/8eq566/uh_wtf_just_happened/). Talking about all time highs, an [indicator](https://alltimehigh.ly/) tracking difference between ATH and current price shows Decred is competitive at retaining USD value.
 
 ## Relevant External
 
 Bittrex finally opened registrations again.
 
 ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and Ethereum. Most opinions reflect on whether and how to resist ASICs, but some are recognizing the Decred way, like [this](https://tokeneconomy.co/is-the-war-against-asics-worth-fighting-b12c6a714bed) excellent piece.
+
+The importance of governance is gaining recognition as well. One notable example is [Mike Hearn's AMA](https://www.reddit.com/r/btc/comments/89z483/ama_ask_mike_anything/) where it was a hot topic.
 
 ## About This Update
 
