--- a/posts/201804.md
+++ b/posts/201804.md
@@ -1,4 +1,4 @@
-# Decred Update — April 2018
+# Decred Journal — April 2018
 
 ## Development
 
@@ -197,9 +197,9 @@ ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and
 
 The importance of governance is gaining recognition as well. One notable example is [Mike Hearn's AMA](https://www.reddit.com/r/btc/comments/89z483/ama_ask_mike_anything/) where it was a hot topic.
 
-## About This Update
+## About This Issue
 
-This update was motivated by the desire to expose just how much is happening in Decred and save the time for people unable to actively follow our channels. It aims to cover all relevant developments with a short description and links to read further. It shows the depth of the project and the involvement of the community. We also plan to launch a newsletter and consider a [shorter version](https://github.com/xaur/decred-news/issues/4) if there is such a demand.
+This project was motivated by the desire to expose just how much is happening in Decred and save the time for people unable to actively follow our channels. It aims to cover all relevant developments with a short description and links to read further. It shows the depth of the project and the involvement of the community. We also plan to launch a newsletter and consider a [shorter version](https://github.com/xaur/decred-news/issues/4) if there is such a demand.
 
 This is the first issue and feedback is welcome to discover what is best for our readers. Please [join](https://slack.decred.org/) our Slack and write us on [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/) or comment directly on [GitHub](https://github.com/xaur/decred-news/issues). Any [help](https://github.com/xaur/decred-news/issues/2) is welcome too.
 
