--- a/posts/201805.md
+++ b/posts/201805.md
@@ -30,9 +30,13 @@ Two new faces were [added](https://github.com/decred/dcrweb/commit/9a410a33c2e3d
 
 ## Network
 
-Hashrate: (TODO: dynamic thorough the month, interesting pool share changes)
+Hashrate: rapid growth from ~4,000 TH/s at the beginning of the month to ~15,000 at the end with new all time high of 17,949. Interesting dynamic in [hashrate distribution](https://dcred.eu/powStats) across mining pools: coinmine.pl share down from 55% to 25% while F2Pool up from 2% to 44%.
 
-Staking: 30-day average ticket price is 88.5 DCR. There was a surge in ticket price to 96.99 with elevated ticket price staying longer than usual. Locked DCR peaked at 47.17% with 3.63 million DCR.
+Staking: 30-day average ticket price is 91.3 DCR (+0.8), stake participation is 46.9% (+0.8%) with 3.68 million DCR locked (+0.15). Min price was 85.56. On May 11 ticket price surged to 96.99 with elevated ticket price staying longer than usual. Locked DCR peaked at 47.17%. This was [speculated](https://www.reddit.com/r/decred/comments/8ixay1/decred_investment_thesis_by_placeholder_ventures/dyvpgg5/?context=3) to be a result of large miner staking.
+
+Nodes: there are 226 public listening and 405 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: v1.2.0 45% (up from 24% last month), v1.1.2 39%, v1.1.0 15% and 1% running outdaded versions.
+
+Data snapshot from May 31.
 
 ## ASICs
 
