--- a/posts/201805.md
+++ b/posts/201805.md
@@ -20,7 +20,7 @@ Decreds own [DNS seeder](https://github.com/decred/dcrseeder) was [released](htt
 
 Ticket splitting service by @matheusd [entered](https://twitter.com/decredproject/status/997560763727265792) beta and [showed](https://www.youtube.com/watch?v=XsVJ1WWsWlA) a 11-way split on mainnet. Help with testing is much appreciated, please join [#ticket_splitting](https://decred.slack.com/messages/CAUF860P3/) to participate in splits, but check [this doc](https://github.com/matheusd/dcr-split-ticket-matcher/blob/master/docs/beta.md) to learn about the risks. Reddit discussion [here](https://www.reddit.com/r/decred/comments/8kgrqg/what_many_of_you_have_been_waiting_for_ticket/).
 
-> jz: Trezor support for Decred is set to drop in their next firmware update, they actually do those pretty often. https://github.com/trezor/trezor-mcu/milestone/2?closed=1 ([slack](https://decred.slack.com/archives/C3PBR19L4/p1525638426000046))
+> jz: Trezor support for Decred is set to drop in their [next firmware update](https://github.com/trezor/trezor-mcu/milestone/2?closed=1), they actually do those pretty often. ([slack](https://decred.slack.com/archives/C3PBR19L4/p1525638426000046))
 
 Decred is now [supported](https://medium.com/summa-technology/introducing-riemann-7c1c3cb4a52) by Riemann, a toolbox to construct transactions for many UTXO-based chains from human-readable strings.
 
@@ -40,32 +40,15 @@ Data snapshot from May 31.
 
 ## ASICs
 
-Obelisk update:
+Obelisk team [posted](https://medium.com/obelisk-blog/obelisk-update-january-may-2018-739229a930ec) an update. Current hashrate estimate of DCR1 is 1200 GH/s at 500 W and may still change. The chips came back at 40% the speed of the simulated results, it is yet unknown why. Batch 1 units may get delayed 1-2 weeks past June 30. See discussions [on r/decred](https://www.reddit.com/r/decred/comments/8hzhjm/obelisk_update_januarymay_2018_obelisk_blog_medium/) and [on r/siacoin](https://www.reddit.com/r/siacoin/comments/8hzgkr/obelisk_update_januarymay_2018/).
 
-* Current hashrate estimate 1200 GH/s at 500 W (may still change)
-* the chips came back at 40% the speed of the simulated results, it is yet unknown why
-* Batch 1 units may get delayed 1-2 weeks past June 30
-* https://medium.com/obelisk-blog/obelisk-update-january-may-2018-739229a930ec
-* https://www.reddit.com/r/decred/comments/8hzhjm/obelisk_update_januarymay_2018_obelisk_blog_medium/
-* Sia sub https://www.reddit.com/r/siacoin/comments/8hzgkr/obelisk_update_januarymay_2018/
+@SiaBillionaire [estimated](https://decred.slack.com/archives/C3P6R055Z/p1526221654000039) 7940 DCR1 units were sold in Batches 1-5, while Lynmar13 [shared](https://medium.com/@brian7249694/the-current-state-of-the-obelisk-dcr1-fff97f6877be) his projections of DCR1 profitability ([reddit](https://www.reddit.com/r/decred/comments/8lgbv2/the_current_state_of_the_obelisk_dcr1/)).
 
-7940 DCR1 units were sold in Batches 1-5 ([slack](https://decred.slack.com/archives/C3P6R055Z/p1526221654000039))
+David Vorick (@taek) [published](https://blog.sia.tech/the-state-of-cryptocurrency-mining-538004a37f9b) lots of insights into the world of ASIC manufacturing ([reddit](https://www.reddit.com/r/decred/comments/8jjyca/the_state_of_cryptocurrency_mining_by_david_vorick/)). Bitmain [replied](https://blog.bitmain.com/en/bitmain-sia-state-cryptocurrency-mining/).
 
-Projections of DCR1 profitability: https://medium.com/@brian7249694/the-current-state-of-the-obelisk-dcr1-fff97f6877be
+New Chinese miner was noticed by our Telegram group. Woodpecker WB2 specs 1.5 TH/s at 1200 W, costs 15,000 CNY (~2,340 USD) and the initial 150 units are expected to ship on Aug 15. ([pow8.com](https://pow8.com/product.php), [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://pow8.com/product.php))
 
-David Vorick (@taek) [published](https://blog.sia.tech/the-state-of-cryptocurrency-mining-538004a37f9b) lots of insights into the world of ASIC manufacturing ([reddit](https://www.reddit.com/r/decred/comments/8jjyca/the_state_of_cryptocurrency_mining_by_david_vorick/)). Bitmain [responded](https://blog.bitmain.com/en/bitmain-sia-state-cryptocurrency-mining/).
-
-Chinese ASIC detected in our Telegram group. https://pow8.com/product.php (TODO: translate specs, shipping date, etc)
-
-Innosilicon D9 is on sale at CryptoEmporium https://www.cryptoemporium.eu/product/innosilicon-d9-miner/ (TODO: there were complaints on #general):
-
-> We have 4 on-hand in the United Kingdom, though we can obtain more if you're looking for a bulk order. Yes we can guarantee delivery within 7 days of payment clearance. We use UPS, DHL or RoyalMail, depending on location. ([twitter](https://twitter.com/CryptoEmporium_/status/992320630153469952), May 4)
-
-ibelink:
-* https://www.reddit.com/r/decred/comments/8kutc4/ibelink_6th_miner/
-  * caution, read warning on reddit thread https://www.reddit.com/r/decred/comments/8kutc4/ibelink_6th_miner/dzc7v40/
-  * caution https://www.reddit.com/r/decred/comments/8ljg9t/ibelink_decred_miner_available/dzg8f7v/
-* https://ibelink.co/product/ibelink-dsm6t-blake256-miner-with-6-th-s-hash-rate/
+Another new miner is iBelink DSM6T: 6 TH/s at 2100 W costing $6,300 ([ibelink.co](https://ibelink.co/product/ibelink-dsm6t-blake256-miner-with-6-th-s-hash-rate/)). Shipping starts from June 5. Some concerns and links were posted in these [two](https://www.reddit.com/r/decred/comments/8kutc4/ibelink_6th_miner/) [threads](https://www.reddit.com/r/decred/comments/8ljg9t/ibelink_decred_miner_available/dzg8f7v/).
 
 ## Integrations
 
@@ -271,7 +254,7 @@ China Electronic Information Industry Development is developing an independent r
 * https://cointelegraph.com/news/china-will-issue-blockchain-standards-in-2019-says-govt-official
 * https://twitter.com/chengdoo/status/994932491591999489
 * http://www.ccidnet.com/2018/0511/10385800.shtml
-* translated https://translate.google.com/translate?sl=auto&tl=en&js=y&prev=_t&hl=en&ie=UTF-8&u=http%3A%2F%2Fwww.ccidnet.com%2F2018%2F0511%2F10385800.shtml
+* translated https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=http://www.ccidnet.com/2018/0511/10385800.shtml
 * https://www.reddit.com/r/decred/comments/8iv6d3/chinas_new_rating_system_decred_one_of_28/
 
 Later it was released, Decred ranked 26. For some context, Bitcoin ranked 13.
@@ -345,5 +328,7 @@ Three pure PoW coins were attacked this month, one attempting at ASIC resistance
 * https://www.ccn.com/japanese-cryptocurrency-monacoin-hit-by-selfish-mining-attack/
 
 ## About This Issue
+
+Some source links point to Slack messages. Although Slack hides history older than ~5 days, you can read individual messages if you paste the message link into chat with yourself.
 
 Credits (Slack names, alphabetical order): .
