--- a/posts/201805.md
+++ b/posts/201805.md
@@ -70,40 +70,28 @@ OpenBazaar [released](https://twitter.com/openbazaar/status/996526909587705856) 
 
 ## Adoption
 
-Paytomat (payments solution for point of sale and e-commerce):
+[Paytomat](https://paytomat.com/), payments solution for point of sale and e-commerce, [integrated](https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e) Decred. This happened in April but was omitted in previous post.
 
-* > oregonisaac: https://paytomat.com/#places accepts Decred. https://decred.slack.com/archives/C0NRMDVMJ/p1525371452000768
-* https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e
+[FastTech](https://www.fasttech.com/), a gadgets and electronics shop, now [accepts](https://support.fasttech.com/FAQ/do-you-accept-bitcoin) Decred and [offers](https://www.reddit.com/r/decred/comments/8hmedm/fasttechcom_now_accepts_dcr_as_payment/) a discount code on our reddit.
 
-FastTech:
+[pepper.works](https://pepper.works/) announced they accept Decred. The service allows to shop on Amazon with crypto and also [offers](https://www.reddit.com/r/decred/comments/8iyqwp/shop_with_decred_on_pepperworks/) a discount.
 
-* https://support.fasttech.com/FAQ/do-you-accept-bitcoin
-* https://www.reddit.com/r/decred/comments/8hmedm/fasttechcom_now_accepts_dcr_as_payment/
+CoinPayments, a payment processor supporting Decred, has [developed](https://twitter.com/coinpaymentsnet/status/996832463694393344) an integration with [@Shopify](https://twitter.com/Shopify) that allows connected merchants to accept cryptocurrencies in exchange for goods.
 
-Blockfolio rolled out Signal Beta with Decred in the list. Blockfolio users who own or watch a coin will automatically receive updates pushed by project teams:
+One of the first merchants to [utilize](https://twitter.com/hipptees/status/996872627296899073) the new Shopify integration was Hipptee, a t-shirt shop that now [accepts](https://www.reddit.com/r/decred/comments/8jze9o/hippteecom_now_accepts_decred_proofofshirts/) Decred. Of course it has [Decred t-shirts](https://hipptee.com/collections/shirts/products/decred-t-shirt), too.
 
-* https://medium.com/@edwardmoncada/helping-the-crypto-ecosystem-find-the-signal-in-the-noise-ff67bb5cc06d
-* https://twitter.com/decredproject/status/995361130821378051
-* nice to see our journal made it to the screenshot
+An update from VotoLegal:
 
-Placeholder announced their first public investment is Decred:
+> michae2xl: Voto Legal: CEO Thiago Rondon of Appcívico, has already been contated by 800 politicians and negotiate with four pre-candidates to the presidency  
+> https://twitter.com/decred_br/status/995294237771091968 ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1526133098000099))
 
-* https://www.placeholder.vc/blog/2018/5/12/decred-investment-thesis
-* https://twitter.com/placeholdervc/status/995339882867380224
-* https://twitter.com/cburniske/status/995340580673769475
-* https://www.reddit.com/r/decred/comments/8ixay1/decred_investment_thesis_by_placeholder_ventures/
+Blockfolio rolled out Signal Beta with Decred [in the list](https://twitter.com/decredproject/status/995361130821378051). Users who own or watch a coin will automatically receive updates pushed by project teams. Nice to see this Journal made it to the screenshot!
 
-pepper.works (TODO: safe to mention, trustworthy?):
+Placeholder Ventures [announced](https://twitter.com/placeholdervc/status/995339882867380224) that Decred is their [first](https://twitter.com/cburniske/status/995340580673769475) public investment. Their [Investment Thesis](https://www.placeholder.vc/blog/2018/5/12/decred-investment-thesis) is a clear and well researched overview of Decred. Among other great points it noted the less obvious benefit of not doing an ICO:
 
-* https://www.reddit.com/r/decred/comments/8iyqwp/shop_with_decred_on_pepperworks/
+> By choosing not to pre-sell coins to speculators, the financial rewards from Decred’s growth most favor those who work for the network.
 
-> michae2xl: Voto Legal: CEO Thiago Rondon of Appcívico, has already been contated by 800 politicians and negotiate with four pre-candidates to the presidency https://twitter.com/decred_br/status/995294237771091968 ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1526133098000099))
-
-CoinPayments, a processor supporting Decred, has [developed](https://twitter.com/coinpaymentsnet/status/996832463694393344) an integration with [@Shopify](https://twitter.com/Shopify) that allows connected merchants to accept cryptocurrencies in exchange for goods.
-
-Hipptee t-shirt shop now [accepts](https://www.reddit.com/r/decred/comments/8jze9o/hippteecom_now_accepts_decred_proofofshirts/) Decred. Of course it has [Decred t-shirts](https://hipptee.com/collections/shirts/products/decred-t-shirt), too.
-
-## Partnerships
+Alex Evans, a cryptoeconomics researcher who recently [joined](https://twitter.com/placeholdervc/status/1002216891446976512) Placeholder, [posted](https://twitter.com/alexhevans/status/1002232216875872257) his 13-page [Decred Network Analysis](https://gateway.ipfs.io/ipfs/QmPBqq3g3LuXiauZdaEcNtQUQ3QUTJUSnT8XuBXPw2be6V/Decred%20Analysis%20-%20Alex.pdf).
 
 ## Marketing
 
