--- a/posts/201805.md
+++ b/posts/201805.md
@@ -107,76 +107,34 @@ Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) wh
 
 ## Events
 
-BitConf:
+[BitConf](http://www.bitconf.com.br/2018SP/) in Sao Paulo, Brazil. Jake Yocom-Piatt presented "Decentralized Central Banking". Note the mini stakey on one of the photos. ([article](https://www.criptomoedasfacil.com/decred-participou-da-vi-bitconf/) ([translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://www.criptomoedasfacil.com/decred-participou-da-vi-bitconf/)), photos: [1](https://twitter.com/decredproject/status/992818912969441281) [2](https://twitter.com/decredproject/status/993238725663408128) [album](https://www.facebook.com/groups/975727812500893/permalink/1930636967009968/))
 
-* https://twitter.com/decredproject/status/992818912969441281
-  * mini stakey detected
-* photos https://twitter.com/decredproject/status/993238725663408128
-* photo album https://www.facebook.com/groups/975727812500893/permalink/1930636967009968/
-* https://www.criptomoedasfacil.com/decred-participou-da-vi-bitconf/ (emiliomann: Article about our presence in Bitconf BR)
+[Wicked Crypto Meetup](https://www.meetup.com/WICKED-CRYPTO-MEETUP/events/248905213/) in Warsaw, Poland. ([video](https://www.youtube.com/watch?v=Pp8jABDi-9I), photos: [1](https://twitter.com/decredproject/status/993592753249435648) [2](https://twitter.com/NoahPierau/status/993841736702193665))
 
-Wicked Crypto Meetup Warsaw https://www.meetup.com/WICKED-CRYPTO-MEETUP/events/248905213/:
+[Decred Polska Meetup](https://www.meetup.com/Decred-Polska/events/250167470/) in Katowice, Poland. First known Decred Cake. (photos: [1](https://twitter.com/NoahPierau/status/993893397957095425) [2](https://twitter.com/Decred_PL/status/993910795657531399))
 
-* https://twitter.com/decredproject/status/993592753249435648
-  * https://www.youtube.com/watch?v=Pp8jABDi-9I
-* https://twitter.com/NoahPierau/status/993841736702193665
+[Consensus 2018](https://www.coindesk.com/events/consensus-2018/) in New York, USA. Photos: [booth](https://twitter.com/jz_bz/status/995789387173687297), [escort](https://twitter.com/jm_buirski/status/995809354652704768), [crew](https://twitter.com/jz_bz/status/995881313860284417), [moon boots](https://twitter.com/marco_peereboom/status/996025751119024128), [giant stakey](https://twitter.com/WhalePanda/status/996037853082681345). Lots of photos and Twitter mentions. One tweet summarized Decred pretty well:
 
-Katowice https://www.meetup.com/Decred-Polska/events/250167470/:
+> One project that stands out at #Consensus2018 is @decredproject. Not annoying. Real tech. Humble team. #BUIDL is strong with them. ([@PallerJohn](https://twitter.com/PallerJohn/status/996188461760696321))
 
-* Decred cake, epic promo https://twitter.com/NoahPierau/status/993893397957095425
-* https://twitter.com/Decred_PL/status/993910795657531399
+[Token Summit](http://tokensummit.com/) in New York, USA. [@cburniske](https://twitter.com/cburniske) and [@jmonegro](https://twitter.com/jmonegro) from Placeholder talked "Governance and Cryptoeconomics" and spoke highly of Decred. (twitter coverage: [1](https://twitter.com/nikhileshde/status/997208583564677120) [2](https://twitter.com/BradyDale/status/997207557721731072), [video](https://www.youtube.com/watch?v=zLtQ3n2o1ME), [video](https://www.pscp.tv/token_summit/1DXxyXDzbNRJM) (from 32 min))
 
-Consensus 2018:
-
-* photos
-  * booth https://twitter.com/jz_bz/status/995789387173687297
-  * jesus escort https://twitter.com/jm_buirski/status/995809354652704768
-  * placeholder https://twitter.com/jz_bz/status/995883178337415168
-  * crew https://twitter.com/jz_bz/status/995881313860284417
-
-Lots of photos and Twitter mentions. One summarized Decred pretty well:
-
-> One project that stands out at #Consensus2018 is @decredproject.  Not annoying. Real tech. Humble team. #BUIDL is strong with them. ([twitter](https://twitter.com/PallerJohn/status/996188461760696321))
-
-Campus Party Bahia:
-
-* João Ferreira aka @girino  and Gabriel @Rhama introducing Decred, talking about governance and teaching to perform atomic swaps
-* http://brasil.campus-party.org/cpbahia/agenda/
-* https://twitter.com/Decred_BR/status/996789764983410688
-* https://twitter.com/decredproject/status/999334165429370880
-
-[TokenSummut](http://tokensummit.com/), New York, USA:
-
-* @cburniske and @jmonegro from Placeholder talked about the importance of governance and spoke highly of Decred
-* https://twitter.com/nikhileshde/status/997208583564677120
-* https://twitter.com/BradyDale/status/997207557721731072
-* https://twitter.com/LucasNuzzi/status/997211030286733312
-* video from 32 min https://www.pscp.tv/token_summit/1DXxyXDzbNRJM
+[Campus Party](http://brasil.campus-party.org/cpbahia/) in Bahia, Brazil. João Ferreira aka @girino and Gabriel @Rhama were introducing Decred, talking about governance and teaching to perform atomic swaps. ([photos](https://twitter.com/decredproject/status/999334165429370880))
 
 Decred was [introduced](https://twitter.com/decredproject/status/997541878680567808) to the delegates from Shanghai's Caohejing Hi-Tech Park, organized by [@ybfventures](https://twitter.com/YBFVentures).
 
-Second meetup in Hangzhou ([photos](https://twitter.com/decredproject/status/998473443753406465))
+Second Decred meetup in Hangzhou, China. ([photos](https://twitter.com/decredproject/status/998473443753406465))
 
-Madison, USA:
+[Madison Blockchain](https://www.meetup.com/Madison-Blockchain/events/250630698/) in Madison, USA. "Lots of in-depth questions. The Q&A lasted longer than the presentation!". ([photo](https://twitter.com/lukebp_/status/998749872273707008))
 
-* https://www.meetup.com/Madison-Blockchain/events/250630698/
-* Great turnout in Madison, Wisconsin tonight. Lots of in-depth questions. The Q&A lasted longer than the presentation! photo https://twitter.com/lukebp_/status/998749872273707008
-
-Blockspot Conference Latam, Brazil, Sao Paulo:
-
-* https://latam.blockspot.co/
-* https://twitter.com/bebrites/status/1001520866293895175
-* https://twitter.com/bebrites/status/1001533635730788359
-
-Campus Party Brasilia:
-
-* TODO
+[Blockspot Conference Latam](https://latam.blockspot.co/) in Sao Paulo, Brazil. (photos: [1](https://twitter.com/bebrites/status/1001520866293895175), [2](https://twitter.com/bebrites/status/1001533635730788359))
 
 Upcoming events:
 
-* [O'Reilly Open Source Convention in Portland](https://conferences.oreilly.com/oscon/oscon-or), USA on July 18-19. Unlike many "regular" events this one is developer focused. @raedah's team will attend.
+* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA on July 18-19. Unlike many "regular" events this one is developer focused. @raedah's team will attend.
+* If you are interested in Decred event in San Francisco Bay Area please check [this thread](https://www.reddit.com/r/decred/comments/8ftdyj/bay_area_community/)
 
-Call for Bay Area community to organize an event https://www.reddit.com/r/decred/comments/8ftdyj/bay_area_community/
+There is a community initiative by @vj to organize information related to events in a [repository](https://github.com/heyvj/decred-events). Jump on [#event_planning](https://decred.slack.com/messages/C66363X44/) channel to contribute.
 
 ## Media
 
